Fix JMH benchmark and update JMH version